# Energy-Analytics-Jake-Schwartz

./: .gitignore  Makefile  Procfile  README.md  index.html  pyproject.toml  railway.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
config/: caiso.yml  data_sources.yml  isone.yml  miso.yml  nyiso.yml  pjm.yml  spp.yml
data/samples/: caiso_load_sample.csv  caiso_price_sample.csv  caiso_queue_sample.csv  caiso_weather_sample.csv  isone_load_sample.csv  isone_price_sample.csv  isone_queue_sample.csv  isone_weather_sample.csv  miso_load_sample.csv  miso_price_sample.csv  miso_queue_sample.csv  miso_weather_sample.csv  nyiso_load_sample.csv  nyiso_price_sample.csv  nyiso_queue_sample.csv  nyiso_weather_sample.csv  pjm_load_sample.csv  pjm_price_sample.csv  pjm_queue_sample.csv  pjm_weather_sample.csv  (+4 more)
energy_analytics/: __main__.py  api.py  charts.py  config.py  contracts.py  dashboard.py  finance.py  forecast.py  grid_map.py  ingest.py  markets.py  qa.py  queue.py  sources.py  status.py  transform.py
reports/: caiso_ingestion_manifest.json  caiso_market_findings.md  caiso_qa_report.md  ingestion_manifest.json  isone_ingestion_manifest.json  isone_market_findings.md  isone_qa_report.md  miso_ingestion_manifest.json  miso_market_findings.md  miso_qa_report.md  nyiso_ingestion_manifest.json  nyiso_market_findings.md  nyiso_qa_report.md  pjm_ingestion_manifest.json  pjm_market_findings.md  pjm_qa_report.md  spp_ingestion_manifest.json  spp_market_findings.md
tests/: helpers.py  test_api.py  test_ingest.py  test_status.py  test_transform.py
(+2 files in other folders)
